small updates to index

--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     <link rel="stylesheet" href="index.css">
     <title>Note Racer</title>
 </head>
+
+<div class="logo">
+    
+</div>
+
 <body>
     <div class="container">
-        <h1>Welcome to Note Racer!</h1>
-        <p>Dive into a unique typing experience that marries educational content with the adrenaline of racing...</p>
+        <div class="introduction">
+            <h1>Welcome to Note Racer!</h1>
+            <p>Dive into a unique typing experience that marries educational content with the adrenaline of racing...</p>
+        </div>
 
         <div class="how-it-works">
             <strong>AI-Generated Transcripts:</strong>
