--- a/game.html
+++ b/game.html
@@ -3,78 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Note Racer - Race Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: 40px auto;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-            color: #007BFF;
-        }
-
-        p {
-            font-size: 14px;
-            margin-bottom: 20px;
-        }
-
-        .transcript-box {
-            position: absolute;
-            top: 100px;
-            left: 20px;
-            background-color: #f9f9f9;
-            padding: 15px;
-            border-radius: 5px;
-            max-width: 200px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .stats-bar {
-            background-color: #f9f9f9;
-            padding: 10px;
-            border-top-left-radius: 5px;
-            border-top-right-radius: 5px;
-            font-size: 12px;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        textarea {
-            width: 100%;
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            height: 300px;
-            resize: none;
-        }
-    </style>
+    <link rel="stylesheet" href="game.css">
+    <title>Note Racer</title>
 </head>
 <body>
     <div class="container">
         <h1>Note Racer</h1>
-
-        <div class="transcript-box">
-            <p>Sample transcript sentence goes here...</p>
-            <div class="stats-bar">
-                <span>WPM: 60</span>
-                <span>CPM: 300</span>
-            </div>
+        <input type="text" placeholder="Type Here...">
+        <textarea placeholder="..."></textarea>
+        <div class="stats-bar">
+            <label for="wpm">WPM:</label>
+            <input id="wpm" type="text" readonly>
         </div>
-
-        <textarea placeholder="Type the transcript here..."></textarea>
     </div>
 </body>
 </html>
