updates on index

--- a/index.html
+++ b/index.html
@@ -8,24 +8,29 @@
 </head>
 
 <div class="logo">
-    
+
 </div>
 
 <body>
     <div class="container">
         <div class="introduction">
             <h1>Welcome to Note Racer!</h1>
-            <p>Dive into a unique typing experience that marries educational content with the adrenaline of racing...</p>
+            <p>Dive into a unique typing experience that marries educational content with the adrenaline of racing. 
+                Here, you won't just be typing random texts; you'll be transcribing AI-generated 
+                lecture notes from your own lectures.</p>
         </div>
 
         <div class="how-it-works">
             <strong>AI-Generated Transcripts:</strong>
-            <p>Our advanced AI system generates accurate and informative lecture notes...</p>
+            <p>AI-Generated Transcripts: Our advanced AI system generates accurate and 
+                informative lecture notes from diverse subjects for you to type out.</p>
         </div>
 
         <div class="type-and-absorb">
             <strong>Type & Absorb:</strong>
-            <p>As you race against the clock (and perhaps other users), you're not merely improving your typing speed...</p>
+            <p>As you race against the clock (and perhaps other users), 
+                you're not merely improving your typing speed, but also gaining insight 
+                into fascinating academic content.</p>
         </div>
 
         <textarea placeholder="Copy and paste your transcript into the box below..."></textarea>
