final index updates for now

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet">
     <title>Note Racer</title>
 </head>
 
@@ -21,20 +22,20 @@
         </div>
 
         <div class="how-it-works">
-            <strong>AI-Generated Transcripts:</strong>
+            <h2>AI-Generated Transcripts:</h2>
             <p>AI-Generated Transcripts: Our advanced AI system generates accurate and 
                 informative lecture notes from diverse subjects for you to type out.</p>
         </div>
 
         <div class="type-and-absorb">
-            <strong>Type & Absorb:</strong>
+            <h2>Type & Absorb:</h2>
             <p>As you race against the clock (and perhaps other users), 
                 you're not merely improving your typing speed, but also gaining insight 
                 into fascinating academic content.</p>
         </div>
 
         <textarea placeholder="Copy and paste your transcript into the box below..."></textarea>
-        <a href="#" class="button">START RACE</a>
+        <a href="game.html" class="button">START RACE</a>
     </div>
 </body>
 </html>
