added js scripts

--- a/game.html
+++ b/game.html
@@ -16,5 +16,7 @@
             <input id="wpm" type="text" readonly>
         </div>
     </div>
+    <script src="js/sentences.js"></script>
+    <script src="js/scripting.js"></script>
 </body>
 </html>
