--- a/game.html
+++ b/game.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap" rel="stylesheet">
     <title>Note Racer</title>
 </head>
 <body>
     <div class="container">
         <h1>Note Racer</h1>
-        <input type="text" placeholder="Type Here...">
+        <div class="text-box">
+            <input type="text" placeholder="Type Here...">
         <textarea placeholder="..."></textarea>
+        </div>
+        
         <div class="stats-bar">
             <label for="wpm">WPM:</label>
             <input id="wpm" type="text" readonly>
