--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                 into fascinating academic content.</p>
         </div>
 
-        <textarea placeholder="Copy and paste your transcript into the box below..."></textarea>
-        <a href="game.html" class="button">START RACE</a>
+        <div class="temp">
+            <textarea placeholder="Copy and paste your transcript into this box..."></textarea>
+            <a href="game.html" class="button">START RACE</a>
+        </div>   
     </div>
 </body>
 </html>
